instructions for setenv to avoid PermGen space errors (#73)